After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750996 - sort-directories-first option is not synced with gtk
sort-directories-first option is not synced with gtk
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Preferences
3.16.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-15 13:10 UTC by Kamil Páral
Modified: 2016-11-07 15:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
inconsistent sorting (1.43 MB, image/png)
2015-06-15 13:10 UTC, Kamil Páral
  Details
files-view, preferences: sync sort-directories-first with Gtk+ (5.29 KB, patch)
2016-11-07 15:13 UTC, Felipe Borges
committed Details | Review

Description Kamil Páral 2015-06-15 13:10:29 UTC
Created attachment 305294 [details]
inconsistent sorting

In Nautilus, I have enabled "sort directories before files". It works. But when I use a file open dialog, the directories and files are mixed up. The option is not honored.

See screenshot. The same directory is shown in the file open dialog in gedit on the left, and in nautilus on the right.

gtk3-3.16.3-1.fc22.x86_64
gnome-shell-3.16.2-1.fc22.x86_64
nautilus-3.16.2-1.fc22.x86_64
Comment 1 Matthias Clasen 2015-06-17 21:55:50 UTC
Don't know what to say... it works as expected here. What does the context menu  in the file chooser show ?
Comment 2 Kamil Páral 2015-06-18 16:13:43 UTC
Ehm... it didn't really occur to me to look into the context menu of the file open dialog. I have checked "sort folders before files" and now it's OK.

To my defense, I expected that this setting is shared across the system, and not that Nautilus has its own and gtk has its own (hidden in the context menu). Or is it a bug and the setting should be synced?

Feel free to close if there's no intention to make this configurable in a single place (otherwise we can reassign to Nautilus, I guess). Thanks.
Comment 3 Emmanuele Bassi (:ebassi) 2015-06-18 16:43:52 UTC
Nautilus should set the sort-directories-first key of the org.gtk.Settings.FileChooser schema — just like it does for the show-hidden one.

Re-assigning to Nautilus.
Comment 4 Felipe Borges 2016-11-07 15:13:49 UTC
Created attachment 339258 [details] [review]
files-view, preferences: sync sort-directories-first with Gtk+

The sort-directories-first gsetting should be consistent
system-wise.
Comment 5 Carlos Soriano 2016-11-07 15:25:10 UTC
Review of attachment 339258 [details] [review]:

LGTM thanks!
Comment 6 Felipe Borges 2016-11-07 15:38:54 UTC
Thank you. This was a bit annoying.

Attachment 339258 [details] pushed as e1443f8 - files-view, preferences: sync sort-directories-first with Gtk+