files-view, preferences: sync sort-directories-first with Gtk+

The sort-directories-first gsetting should be consistent
system-wise.

https://bugzilla.gnome.org/show_bug.cgi?id=750996